# ros

./: .gitignore  CODEX_CONTEXT.md  CODEX_PITFALLS.md  README.md  ros2_learning_notes.md
docs/superpowers/plans/: 2026-06-16-yolo-backend-implementation.md
docs/superpowers/specs/: 2026-06-16-yolo-backend-design.md
src/robot_bringup/: README.md  WEEK_02_02_ROBOT_BRINGUP_PACKAGE.md  package.xml  setup.py
src/robot_bringup/launch/: display_robot.launch.py  turtlesim_goal.launch.py
src/robot_bringup/robot_bringup/: __init__.py
src/robot_bringup/test/: test_bringup_assets.py
src/robot_description/: README.md  WEEK_03_02_ROBOT_DESCRIPTION_URDF.md  WEEK_03_03_XACRO_AND_BRINGUP.md  package.xml  setup.py
src/robot_description/launch/: display.launch.py
src/robot_description/rviz/: display.rviz
src/robot_description/test/: test_robot_description_assets.py
src/robot_description/urdf/: diffbot.urdf  diffbot.urdf.xacro  diffbot_components.xacro  diffbot_materials.xacro
src/robot_interfaces/: CMakeLists.txt  README.md  WEEK_02_03_CUSTOM_INTERFACES_AND_REVIEW.md  package.xml
src/robot_interfaces/msg/: TargetDetection.msg
src/robot_interfaces/test/: test_interface_assets.py
src/robot_perception/: README.md  WEEK_05_01_IMAGE_DETECTION_NODE.md  WEEK_05_02_YOLO_BACKEND.md  package.xml  setup.cfg  setup.py
src/robot_perception/config/: color_detector.yaml  yolo_detector.yaml
src/robot_perception/launch/: color_detector.launch.py  yolo_detector.launch.py
src/robot_perception/robot_perception/: color_blob_detector.py  image_detector_node.py  yolo_detector.py
src/robot_perception/test/: test_color_blob_detector.py  test_node_shutdown.py  test_perception_assets.py  test_yolo_detector.py
src/robot_simulation/: README.md  WEEK_04_01_GAZEBO_ENVIRONMENT.md  WEEK_04_02_DIFFBOT_DRIVE_IN_GAZEBO.md  WEEK_04_03_SENSORS_TF_RVIZ.md  package.xml  setup.py
src/robot_simulation/config/: clock_bridge.yaml  diff_drive_bridge.yaml  sensor_bridge.yaml
src/robot_simulation/launch/: diffbot_drive.launch.py  diffbot_sensors_rviz.launch.py  gazebo_empty_world.launch.py
src/robot_simulation/models/yolo_stop_sign_board/meshes/: stop_sign_board.mtl
src/robot_simulation/robot_simulation/: odom_to_tf.py
src/robot_simulation/rviz/: sensors.rviz
src/robot_simulation/test/: test_odom_to_tf.py  test_simulation_assets.py
src/robot_simulation/worlds/: diffbot_drive.world.sdf  diffbot_sensors.world.sdf  empty_diffbot.world.sdf
src/tf2_frame_demo/: README.md  WEEK_03_01_TF2_FRAMES.md  package.xml  setup.cfg  setup.py
src/tf2_frame_demo/launch/: tf2_demo.launch.py
src/tf2_frame_demo/test/: test_frame_math.py  test_node_shutdown.py  test_tf2_frame_demo_assets.py
src/tf2_frame_demo/tf2_frame_demo/: dynamic_frame_broadcaster.py  frame_listener.py  frame_math.py
src/turtlesim_p_controller/: CODE_WALKTHROUGH.md  README.md  WEEK_01_ROS2_BASIC_COMMUNICATION.md  WEEK_02_01_LAUNCH_AND_PARAMS.md  package.xml  setup.cfg  setup.py
src/turtlesim_p_controller/config/: goal_controller.yaml
src/turtlesim_p_controller/launch/: turtlesim_goal.launch.py
src/turtlesim_p_controller/test/: test_controller_math.py  test_goal_service.py  test_launch_assets.py
src/turtlesim_p_controller/turtlesim_p_controller/: __init__.py  controller_math.py  goal_service.py  turtle_goal_controller.py
