<?xml version="1.0"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.1.0</version>
  <description>ROS 2 learning bringup package for launching composed systems.</description>
  <maintainer email="student@example.com">ROS 2 Learner</maintainer>
  <license>MIT</license>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_description</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>turtlesim_p_controller</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
