<?xml version="1.0"?>
<package format="3">
  <name>robot_description</name>
  <version>0.1.0</version>
  <description>Robot model description assets for the ROS 2 learning robot.</description>
  <maintainer email="student@example.com">ROS 2 Learner</maintainer>
  <license>MIT</license>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
