<?xml version="1.0"?>
<package format="3">
  <name>robot_perception</name>
  <version>0.1.0</version>
  <description>ROS 2 image perception exercises for the learning robot.</description>
  <maintainer email="student@example.com">ROS 2 Learner</maintainer>
  <license>MIT</license>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_interfaces</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
