<?xml version="1.0"?>
<package format="3">
  <name>turtlesim_p_controller</name>
  <version>0.1.0</version>
  <description>ROS 2 turtlesim P 控制学习练习。</description>
  <maintainer email="student@example.com">ROS 2 Learner</maintainer>
  <license>MIT</license>

  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>turtlesim</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
